# PolyX-CLI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
polyx/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  types.py
polyx/ai/: __init__.py  base.py  gemini.py  grok.py  openrouter.py  registry.py
polyx/analysis/: __init__.py  engagement.py  noise.py  sentiment.py
polyx/client/: __init__.py  api_v2.py  auto.py  graphql.py
polyx/monitoring/: __init__.py  trends.py  watch.py
polyx/output/: __init__.py  formats.py  reports.py
polyx/storage/: __init__.py  cache.py  costs.py
tests/: conftest.py  test_ai_providers.py  test_api_v2.py  test_auto_client.py  test_cache.py  test_cli.py  test_costs.py  test_formats.py  test_graphql.py  test_noise.py  test_reports.py  test_sentiment.py  test_trends.py  test_types.py  test_watch.py
