[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polyx-cli"
version = "0.1.0"
description = "Terminal toolkit for X/Twitter search, monitoring, sentiment, and reporting"
readme = { file = "README.md", content-type = "text/markdown" }
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
authors = [
    { name = "Elyze Solutions" },
]
keywords = ["x", "twitter", "cli", "monitoring", "sentiment-analysis", "osint"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
]
dependencies = [
    "click>=8.1",
    "aiohttp>=3.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
ai = [
    "httpx>=0.27",
]
rich = [
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "aioresponses>=0.7",
    "ruff>=0.5",
    "mypy>=1.10",
    "build>=1.2",
    "twine>=6.1",
]
all = ["polyx-cli[ai,rich,dev]"]

[project.scripts]
polyx = "polyx.cli:main"

[project.urls]
Homepage = "https://github.com/ElyzeSolutions/PolyX-CLI"
Documentation = "https://github.com/ElyzeSolutions/PolyX-CLI#readme"
Repository = "https://github.com/ElyzeSolutions/PolyX-CLI"
Issues = "https://github.com/ElyzeSolutions/PolyX-CLI/issues"

[tool.hatch.build.targets.sdist]
exclude = [
    "/.github",
    "/docs",
    "/polyx.png",
]

[tool.hatch.build.targets.wheel]
packages = ["polyx"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
